Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12847

ClearCase Plugin performs a "reserved" checkout even if the checkbox "reserved" is not checked

XMLWordPrintable

    • 5078b70ddbecca33820c59aabb1597650915c34b

      When checkin out a file, the user has the option to check out "unreserved" by unchecking the "reserved" checkbox in the checkout dialog.

      Unfortunately, the ClearCase plugin does only neglect the "-reserved" option when sending the command. But the "-unreserved" option has to be set, if the checkout has to be unreserved.

        For Gerrit Dashboard: QTCREATORBUG-12847
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            forcasius Markus Hofmann
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes