ClearCase: Fix unreserved checkout

Task-number: QTCREATORBUG-12847
Change-Id: I8b42631adf62cd9b6afea619a17bf01a725a2968
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>